[gd_scene load_steps=6 format=3 uid="uid://cu2df8fshriap"]

[ext_resource type="Script" path="res://Prefabs/FallingItem/FallingItem.gd" id="1_bud4b"]
[ext_resource type="Texture2D" uid="uid://bbxcvntp7gyfw" path="res://Prefabs/FallingItem/gooditem.png" id="2_3r8a2"]
[ext_resource type="Texture2D" uid="uid://c1clo6k4aioye" path="res://Prefabs/FallingItem/baditem.png" id="3_jey3t"]
[ext_resource type="AudioStream" uid="uid://cy3j5nboqlfes" path="res://pickup2.ogg" id="4_ce8ga"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6y4p"]

[node name="FallingItem" type="Node2D"]
script = ExtResource("1_bud4b")
good_sprite = ExtResource("2_3r8a2")
bad_sprite = ExtResource("3_jey3t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_3r8a2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.6, 1.6)
shape = SubResource("CircleShape2D_a6y4p")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ce8ga")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="on_pickup"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
